# ProjectRanni

./: .gitignore  README.md  dodge_windows.json  hd5_eda.ipynb  pyproject.toml
BC_eval/: __init__.py  __main__.py  evaluate.py  model_loader.py  random_policy.py  verify_samples.py
BC_training/: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  UV_USAGE.md  __init__.py  __main__.py  analyze_dataset.py  dodge_timing_experiment.ipynb  requirements.txt  setup_pod.sh  train.py
data_pipeline/: __main__.py  download_videos.py  extract_frames.py  hp_detection.py  trim_videos.py  validate_pipeline.py  video_to_pickle.py
dodge_policy/: __init__.py  __main__.py  action_wrapper.py  agent.py  analyze_recording.ipynb  analyze_recording.py  anim_vocab.json  build_empirical_windows.py  build_windows_from_expert.py  build_windows_from_hits.py  collect_rudder_data.py  config.py  dodge_only_agent.py  dodge_only_wrapper.py  dodge_window_model.py  env_factory.py  hit_predictor.py  ppo.py  record_episode.py  rudder_analysis.ipynb  rudder_model.py  rudder_reward.py  train.py  train_dodge_only.py  visualize_rudder.py  world_model.py  world_model_reward.py
gameplay_pipeline/: __main__.py  anim_diagnostic.py  arena_boundary.py  convert_to_zarr.py  episode_data_analysis.ipynb  explore_zarr_dataset.ipynb  hf_upload.py  preprocess_dataset.py  record_gameplay.py  recording_config.toml.example  siphon_config.toml.example  trace_paths.py  visualize_recording.py  z_profile.py
paths/: margit_arena_boundary.json  margit_arena_metrics.json  margit_arena_trace.json
rudder_data_v2/: episode_0000.npz  episode_0001.npz  episode_0002.npz  episode_0003.npz  episode_0004.npz  episode_0005.npz  episode_0006.npz  episode_0007.npz  episode_0008.npz  episode_0009.npz  episode_0010.npz  episode_0011.npz  episode_0012.npz  episode_0013.npz  episode_0014.npz  episode_0015.npz  episode_0016.npz  episode_0017.npz  episode_0018.npz  episode_0019.npz  episode_0020.npz  episode_0021.npz  episode_0022.npz  episode_0023.npz  episode_0024.npz  episode_0025.npz  episode_0026.npz  episode_0027.npz  episode_0028.npz  episode_0029.npz  episode_0030.npz  episode_0031.npz  episode_0032.npz  episode_0033.npz  episode_0034.npz  (+190 more)
(+63 files in other folders)
