[project]
name = "projectranni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
yt_data_pipeline = [
    "easyocr>=1.7.0",
    "h5py>=3.15.1",
    "matplotlib>=3.7.0",
    "numpy>=2.0",
    "opencv-python>=4.8.0,<5.0",
    "pillow>=12.0.0",
    "rich>=13.0.0",
    "yt-dlp>=2025.10.22",
]
gameplay_pipeline = [
    "pysiphon>=1.0.3",
    "pillow>=12.0.0",
    "rich>=13.0.0",
    "huggingface-hub>=1.0.1",
    "tomli>=2.0.0; python_version < '3.11'",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "opencv-python>=4.8.0,<5.0",
    "numpy>=2.0",
    "zarr>=2.18.0",
]
bc_training = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.9",
    "orbax-checkpoint>=0.5.0,<0.6.0",
    "zarr>=2.18.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",
    "wandb>=0.16.0",
    "matplotlib>=3.7.0",
    "pandas>=2.3.3",
    "tqdm>=4.65.0",
    "numpy>=2.0",
]
bc_eval = [
    "eldengym>=0.4.1",
    "jax>=0.4.26",  # 0.4.26+ supports numpy 2.0
    "jaxlib>=0.4.26",
    "flax>=0.8.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",
    "wandb>=0.16.0",
    "rich>=13.0.0",
    "numpy>=2.0",  # Match eldengym's numpy version
    "opencv-python>=4.8.0,<5.0",
]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]

[tool.uv]
default-groups = ["yt_data_pipeline", "gameplay_pipeline", "bc_training", "bc_eval", "dev"]
